white lines fix

--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -48,6 +48,7 @@
 
 
 </body>
+<script>L_DISABLE_3D = true;</script>
  <script src="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 <script>
     var mymap = L.map('mapid').setView([40.7829, -73.9654], 12);
