--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -4,15 +4,38 @@
   <title>New York City Taxi Data</title>
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/darkly/bootstrap.min.css">
   <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-0.12.1.min.css" type="text/css" />
+  <link rel="stylesheet" href="static/leaflet.awesome-markers.css">
+  <script>L_DISABLE_3D = true;</script>
+  <script src="https://use.fontawesome.com/76435eb78f.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!--<script src="static/jquery-1.12.4.min.js"></script>-->
+  <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-0.12.1.min.js"></script>
   <style>
-      #mapid {height: 800px} 
+      #mapid {height: 700px} 
+
+      .modal {
+          display:    none;
+          position:   fixed;
+          z-index:    1000;
+          top:        0;
+          left:       0;
+          height:     100%;
+          width:      100%;
+          background: rgba( 255, 255, 255, 0 ) 
+                      url('static/ajax-loader.gif') 
+                      50% 50% 
+                      no-repeat;
+      }
+
+      body.loading .modal {
+          display: block;
+      }
+
   </style>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
-  <div class="container-fluid">
+  <div class="container-fluid" style = "width: 95%">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -28,99 +51,43 @@
 
 {% from "_formhelpers.html" import render_field %}
 
-<div class='container-fluid'>
+<div class='container-fluid' style="width:95%">
   <div class='row'>
     
-  <div class="col-md-2"> 
-    Select Start Point <br> 
+  <div class="col-md-2" > 
+    <h4>Select Start Point </h4><br> 
     
     {{ form.hidden_tag() }}
 
      <br> {{ render_field(form.neighborhood, class_="form-control") }}
      <br> {{ render_field(form.blocks, class_="form-control") }} 
+     <br><hr><br>
+     <span id='infotext'></span>
       
 
     </div>
-  
-  <div class="col-md-10" id="mapid"></div>
+  <div class="col-md-4" style="border-left: 1px solid #333; border-right: 1px solid #333;">
+    <span><h4>Trips by Hour</h4></span>
+    <hr>
+    <div id="bokeh-bar"></div>
+    <span><h4>Trips by Month</h4></span>
+    <hr>
+    <div id="bokeh-line"></div>
+  </div>
+  <div class="col-md-6">
+    <span><h4>Top 10 Routes</h4></span>
+    <hr>
+    <div id='mapid'></div>
+  </div>
   </div>
 </div>
-
+<div class="modal"><!-- Place at bottom of page --></div>
 
 </body>
-<script>L_DISABLE_3D = true;</script>
+
  <script src="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-<script>
-    var mymap = L.map('mapid').setView([40.7829, -73.9654], 12);
+ <script src="static/leaflet.awesome-markers.js"></script>
+ 
+<script type="text/javascript" src="static/map.js"></script>
 
-    L.tileLayer('https://api.mapbox.com/styles/v1/dlin17/cirk21jpg0002gim26e51q0f9/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoiZGxpbjE3IiwiYSI6ImNpcmsyMGxudzAwMnlmYm5icXlzYWsxd2IifQ.MUxIcntS8U8rRa41fbPo_Q', {
-        maxZoom: 18,
-        attribution: "© <a href='https://www.mapbox.com/map-feedback/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a>"
-    }).addTo(mymap);
-
-    var markers = new L.FeatureGroup()
-
-    mymap.addLayer(markers)
-
-    $('#neighborhood').on("change", function() {
-      $('#blocks').empty();
-
-      var neighborhood_id = $("#neighborhood option:selected").val();
-
-      $.getJSON('get_blocks', {
-        neighborhood: neighborhood_id
-      }, function(data) {
-        var options = $('#blocks');
-        $.each(data, function(key, value) {
-          options.append($("<option />").val(key).text(value));
-        })
-      });
-
-    });
-
-    $('#blocks').on("change", function() {
-      var block_id = $("#blocks option:selected").val();
-      $.getJSON('map_api', {
-        block: block_id
-      }, function(data) {
-        var start = data.origin
-        var top10 = data.paths
-        var names = data.names
-        var destinations = data.destinations
-
-
-        var circle = L.circle(start, 200, {
-            color: 'red',
-            stroke: false,
-            fillColor: '#e6e6e6',
-            fillOpacity: 0.5
-        })
-        markers.clearLayers();
-        markers.addLayer(circle);
-        
-        mymap.fitBounds(top10)
-
-        for (i = 0; i < top10.length; i++) {
-          var info = names[i]
-          var marker = L.marker(destinations[i], {
-            title: info.name
-          }).bindPopup("<center><b>" + info.name + 
-                      "</b><br>Trips: " + info.trips + 
-                      "<br>Average Fare: " + info.avg_fare + 
-                      "<br>Average Time: " + info.avg_time);
-
-          var line = L.polyline(top10[i], {
-            color: '#375a7f',
-            opacity: 0.8
-          });
-
-          markers.addLayer(marker);
-          markers.addLayer(line);
-        }
-      })
-    });
-
-
-
-</script>
 </html>
